--- a/compose-assignment-1/answer/docker-compose.yml
+++ b/compose-assignment-1/answer/docker-compose.yml
@@ -4,7 +4,7 @@
 
 services:
   drupal:
-    image: drupal:9
+    image: drupal
     ports:
       - "8080:80"
     volumes:
@@ -13,7 +13,7 @@ services:
       - drupal-sites:/var/www/html/sites      
       - drupal-themes:/var/www/html/themes
   postgres:
-    image: postgres:14
+    image: postgres
     environment:
       - POSTGRES_PASSWORD=mypasswd
 
